# pico-project-template

./: .gitignore  README.md
cmakelists_template/: CMakeLists.txt
examples/build_and_debug/: config.json  gbd_commands_template.json  gdb_commands.json  project.py  run.py  t.sh
examples/build_and_debug/src/: CMakeLists.txt  blink.c
examples/build_and_debug/src/blink400ms/: blink.c
examples/build_and_run/: config.json  project.py
examples/build_and_run/src/blink100ms/: blink.c
examples/build_only/: config.json  run.sh
examples/build_only/src/blink100ms/: gdb_commands.txt
no_unplug/src/: CMakeLists.txt  main.c
print_serial/: README.md
print_serial/src/: serial.c
project_template/: README.md  config_template.json  gbd_commands_template.json  project.py  run.py  run.sh
